--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
+#para el envio de correos
+
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
 MAIL_USER=elmoadicto770@gmail.com
 MAIL_PASS=czer pvun jgvd ypmf
+
+
+
+#conectar a bbdd
+DB_HOST=localhost
+DB_USER = root
+DB_PORT = 3306
+DB_PASSWORD =  
+BB_SCHEMA = demo_1
