--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
 .env
 *.pyc
+app/db/__pycache__/db_connection.cpython-313.pyc
+app/db/__pycache__/__init__.cpython-313.pyc
+app/core/__pycache__/config.cpython-313.pyc
+app/core/__pycache__/__init__.cpython-313.pyc
+app/__pycache__/main.cpython-313.pyc
+app/__pycache__/__init__.cpython-313.pyc
+app/models/__pycache__/__init__.cpython-313.pyc
+app/models/__pycache__/bodega.cpython-313.pyc
+app/models/__pycache__/bodeguero.cpython-313.pyc
+app/models/__pycache__/movimiento_inventario.cpython-313.pyc
+app/models/__pycache__/proyectos.cpython-313.pyc
+app/models/__pycache__/reportes.cpython-313.pyc
+app/models/__pycache__/usuario.cpython-313.pyc
+app/routers/__pycache__/__init__.cpython-313.pyc
+app/routers/__pycache__/admin_user.cpython-313.pyc
+app/routers/__pycache__/bodega.cpython-313.pyc
+app/routers/__pycache__/bodeguero.cpython-313.pyc
+app/routers/__pycache__/movimiento_inventario.cpython-313.pyc
+app/routers/__pycache__/piezas.cpython-313.pyc
+app/routers/__pycache__/proyectos.cpython-313.pyc
+app/routers/__pycache__/recuperacion.cpython-313.pyc
+app/routers/__pycache__/reportes.cpython-313.pyc
+app/routers/__pycache__/usuario.cpython-313.pyc
+app/services/__pycache__/__init__.cpython-313.pyc
+app/services/__pycache__/admin_user.cpython-313.pyc
+app/services/__pycache__/bodega.cpython-313.pyc
+app/services/__pycache__/bodeguero.cpython-313.pyc
+app/services/__pycache__/movimiento_inventario.cpython-313.pyc
+app/services/__pycache__/proyectos.cpython-313.pyc
+app/services/__pycache__/recuperacion.cpython-313.pyc
+app/services/__pycache__/reportes.cpython-313.pyc
+app/services/__pycache__/usuario.cpython-313.pyc
+app/services/__pycache__/verificador.cpython-313.pyc
+app/utils/__pycache__/__init__.cpython-313.pyc
+app/utils/__pycache__/email.cpython-313.pyc
